data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_833.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\8c\80\80\80\00\01\03\65\6e\76\04\66\75"
    "\6e\63\00\00\03\82\80\80\80\00\01\00\0a\9c\80\80"
    "\80\00\01\96\80\80\80\00\01\01\7f\03\40\01\02\40"
    "\20\00\45\04\40\10\00\01\0c\02\0b\0b\0b\0b"
  )
""
)